[package]
name = "typed-path"
description = "Provides typed variants of Path and PathBuf for Unix and Windows"
version = "0.2.2"
edition = "2021"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
categories = ["development-tools", "filesystem", "os"]
keywords = ["unicode", "utf8", "paths", "filesystem"]
homepage = "https://github.com/chipsenkbeil/typed-path"
repository = "https://github.com/chipsenkbeil/typed-path"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
